deployment/minikube_configs/pod-env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: edu-test-pod-env
spec:
  containers:
    - name: ubuntu
      image: ubuntu:latest
      command: [ "/bin/sh", "-c", "--" ]
      args: [ "sleep 90" ]
  restartPolicy: Never
