deployment/minikube_configs/contractdeployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: contractdeployment
  labels:
    app: contractdeployment
    component: contracts
    part-of: cryptosoccer
    version: "0.0.1"
spec:
  type: NodePort
  ports:
   - port: 5432
  selector:
   app: contractdeployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contractdeployment
  labels:
    app: contractdeployment
    component: contracts
    part-of: cryptosoccer
    version: "0.0.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contractdeployment
  template:
    metadata:
      labels:
        app: contractdeployment
        component: contracts
        part-of: cryptosoccer
        version: "0.0.1"
    spec:
      containers:
      - name: contractdeployment
        image: contractdeployment:0.0.1
  restartPolicy: Never
