deployment/minikube_configs/relayapi.yaml
apiVersion: v1
kind: Service
metadata:
  name: relayapi
  labels:
    app: relayapi
    component: graphql
    part-of: cryptosoccer
    version: "0.0.1"
spec:
  selector:
    app: relayapi
    #type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 4000
    targetPort: 4000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: relayapi
  labels:
    app: relayapi
    component: graphql
    part-of: cryptosoccer
    version: "0.0.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: relayapi
  template:
    metadata:
      labels:
        app: relayapi
        component: graphql
        part-of: cryptosoccer
        version: "0.0.1"
    spec:
      containers:
      - name: relayapi
        image: freeverseio/relay.api:dev
        imagePullPolicy: Always
        args: [-d, postgres://$(freeverse_username):$(freeverse_password)@relaydb:5432/relay,
               --assetsContractAddress, "$(assets_contract_address)",
               --privateKey, "5d0060adb17bd80efd7fff71e718bdd97acf3c6e0c633d8f7fd451044c0d1480",
               --ethereum, http://ethereum:8545]
        ports:
        - containerPort: 4000
      imagePullSecrets:
      - name: docker-secret
