deployment/minikube_configs/relaydb.yaml
apiVersion: v1
kind: Service
metadata:
  name: relaydb
  labels:
    app: relaydb
    component: database
    part-of: cryptosoccer
    version: "0.0.1"
spec:
  #type: NodePort
  ports:
   - port: 5432
  selector:
   app: relaydb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: relaydb
  labels:
    app: relaydb
    component: database
    part-of: cryptosoccer
    version: "0.0.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: relaydb
  template:
    metadata:
      labels:
        app: relaydb
        component: database
        part-of: cryptosoccer
        version: "0.0.1"
    spec:
      containers:
      - name: relaydb
        image: freeverseio/relay.db:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 5432
      imagePullSecrets:
      - name: docker-secret
