deployment/minikube_configs/synchronizer.yaml
apiVersion: v1
kind: Service
metadata:
  name: synchronizer
  labels:
    app: synchronizer
    component: synchronizer
    part-of: cryptosoccer
    version: "0.0.1"
spec:
  #type: NodePort
  ports:
  - port: 4004
  selector:
    app: synchronizer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synchronizer
  labels:
    app: synchronizer
    component: synchronizer
    part-of: cryptosoccer
    version: "0.0.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synchronizer
  template:
    metadata:
      labels:
        app: synchronizer
        component: synchronizer
        part-of: cryptosoccer
        version: "0.0.1"
    spec:
      containers:
      - name: synchronizer
        image: freeverseio/synchronizer:dev
        imagePullPolicy: Always
        args: [-postgres, "postgres://$(freeverse_username):$(freeverse_password)@universedb:5432/cryptosoccer?sslmode=disable",
               -relaydb, "postgres://$(freeverse_username):$(freeverse_password)@relaydb:5432/relay?sslmode=disable",
               -ethereum, http://ethereum:8545,
               -leaguesContractAddress, "$(leagues_contract_address)",
               -engineContractAddress, "$(engine_contract_address)",
               -enginePreCompContractAddress, "$(engineprecomp_contract_address)",
               -marketContractAddress, "$(market_contract_address)",
               -updatesContractAddress, "$(updates_contract_address)",
               -assetsContractAddress, "$(assets_contract_address)",
               -evolutionContractAddress, "$(evolution_contract_address)",
               -playandevolveContractAddress, "$(play_and_evolve_contract_address)",
               -trainingpointsContractAddress, "$(training_points_contract_address)",
               -utilsContractAddress, "$(utils_match_log_contract_address)"]

      imagePullSecrets:
      - name: docker-secret
