deployment/minikube_configs/universedb.yaml
apiVersion: v1
kind: Service
metadata:
  name: universedb
  labels:
    app: universedb
    component: database
    part-of: cryptosoccer
    version: "0.0.1"
spec:
  type: NodePort
  ports:
   - port: 5432
  selector:
   app: universedb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: universedb
  labels:
    app: universedb
    component: database
    part-of: cryptosoccer
    version: "0.0.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: universedb
  template:
    metadata:
      labels:
        app: universedb
        component: database
        part-of: cryptosoccer
        version: "0.0.1"
    spec:
      containers:
      - name: universedb
        image: freeverseio/universe.db:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: "/var/lib/postgresql/data"
          name: universedb-storage
      imagePullSecrets:
      - name: docker-secret
      volumes:
      - name: universedb-storage
        persistentVolumeClaim:
          claimName: universedb-pvclaim
